create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1070,7 +1070,7 @@ a {
   background-image: url("../../../assets/images/background8.jpg");
 }
 .cid-sZXN5scZxT .card-wrapper {
-  background: #ffffff;
+  background: #004669;
   border-radius: 4px;
 }
 @media (max-width: 767px) {
@@ -1088,25 +1088,32 @@ a {
     padding: 4rem;
   }
 }
-.cid-sZYmKLsoQD {
+.cid-sZXN5scZxT .card-title {
+  color: #ffffff;
+}
+.cid-sZXN5scZxT .mbr-text,
+.cid-sZXN5scZxT .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-sZYKqFz1Zr {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #000000;
 }
-.cid-sZYmKLsoQD .row-links {
+.cid-sZYKqFz1Zr .row-links {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .social-row {
+.cid-sZYKqFz1Zr .social-row {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .media-container-row {
+.cid-sZYKqFz1Zr .media-container-row {
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -1114,13 +1121,13 @@ a {
   padding: 0;
   margin-bottom: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li {
   padding: 0 1rem 1rem 1rem;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li p {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li p {
   margin: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list {
+.cid-sZYKqFz1Zr .media-container-row .social-list {
   width: auto;
   padding-left: 0;
   margin-bottom: 0;
@@ -1129,36 +1136,33 @@ a {
   flex-wrap: wrap;
   justify-content: flex-end;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .mbr-iconfont-social {
+.cid-sZYKqFz1Zr .media-container-row .social-list .mbr-iconfont-social {
   font-size: 1.5rem;
   color: #ffffff;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .soc-item {
+.cid-sZYKqFz1Zr .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a {
+.cid-sZYKqFz1Zr .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   transition: .2s linear;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a:hover {
+.cid-sZYKqFz1Zr .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-sZYmKLsoQD .media-container-row .social-list {
+  .cid-sZYKqFz1Zr .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt {
   word-break: break-word;
   width: 100%;
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt p {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-sZYmKLsoQD foot-menu-item {
-  text-align: right;
 }
 .cid-sZXMY19iew {
   z-index: 1000;
@@ -1544,25 +1548,25 @@ a {
 .cid-sZYxLii5sg .mbr-text {
   color: #ffffff;
 }
-.cid-sZYmKLsoQD {
+.cid-sZYKqFz1Zr {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #000000;
 }
-.cid-sZYmKLsoQD .row-links {
+.cid-sZYKqFz1Zr .row-links {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .social-row {
+.cid-sZYKqFz1Zr .social-row {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .media-container-row {
+.cid-sZYKqFz1Zr .media-container-row {
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -1570,13 +1574,13 @@ a {
   padding: 0;
   margin-bottom: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li {
   padding: 0 1rem 1rem 1rem;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li p {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li p {
   margin: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list {
+.cid-sZYKqFz1Zr .media-container-row .social-list {
   width: auto;
   padding-left: 0;
   margin-bottom: 0;
@@ -1585,36 +1589,33 @@ a {
   flex-wrap: wrap;
   justify-content: flex-end;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .mbr-iconfont-social {
+.cid-sZYKqFz1Zr .media-container-row .social-list .mbr-iconfont-social {
   font-size: 1.5rem;
   color: #ffffff;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .soc-item {
+.cid-sZYKqFz1Zr .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a {
+.cid-sZYKqFz1Zr .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   transition: .2s linear;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a:hover {
+.cid-sZYKqFz1Zr .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-sZYmKLsoQD .media-container-row .social-list {
+  .cid-sZYKqFz1Zr .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt {
   word-break: break-word;
   width: 100%;
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt p {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-sZYmKLsoQD foot-menu-item {
-  text-align: right;
 }
 .cid-sZXMY19iew {
   z-index: 1000;
@@ -2000,25 +2001,25 @@ a {
 .cid-sZYo3B5vXj .mbr-section-title {
   color: #ffffff;
 }
-.cid-sZYmKLsoQD {
+.cid-sZYKqFz1Zr {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #000000;
 }
-.cid-sZYmKLsoQD .row-links {
+.cid-sZYKqFz1Zr .row-links {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .social-row {
+.cid-sZYKqFz1Zr .social-row {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .media-container-row {
+.cid-sZYKqFz1Zr .media-container-row {
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -2026,13 +2027,13 @@ a {
   padding: 0;
   margin-bottom: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li {
   padding: 0 1rem 1rem 1rem;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li p {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li p {
   margin: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list {
+.cid-sZYKqFz1Zr .media-container-row .social-list {
   width: auto;
   padding-left: 0;
   margin-bottom: 0;
@@ -2041,36 +2042,33 @@ a {
   flex-wrap: wrap;
   justify-content: flex-end;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .mbr-iconfont-social {
+.cid-sZYKqFz1Zr .media-container-row .social-list .mbr-iconfont-social {
   font-size: 1.5rem;
   color: #ffffff;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .soc-item {
+.cid-sZYKqFz1Zr .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a {
+.cid-sZYKqFz1Zr .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   transition: .2s linear;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a:hover {
+.cid-sZYKqFz1Zr .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-sZYmKLsoQD .media-container-row .social-list {
+  .cid-sZYKqFz1Zr .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt {
   word-break: break-word;
   width: 100%;
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt p {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-sZYmKLsoQD foot-menu-item {
-  text-align: right;
 }
 .cid-sZXMY19iew {
   z-index: 1000;
@@ -2468,25 +2466,25 @@ a {
 .cid-sZYrvAouo7 .mbr-section-subtitle {
   color: #ffffff;
 }
-.cid-sZYmKLsoQD {
+.cid-sZYKqFz1Zr {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #000000;
 }
-.cid-sZYmKLsoQD .row-links {
+.cid-sZYKqFz1Zr .row-links {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .social-row {
+.cid-sZYKqFz1Zr .social-row {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .media-container-row {
+.cid-sZYKqFz1Zr .media-container-row {
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -2494,13 +2492,13 @@ a {
   padding: 0;
   margin-bottom: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li {
   padding: 0 1rem 1rem 1rem;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li p {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li p {
   margin: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list {
+.cid-sZYKqFz1Zr .media-container-row .social-list {
   width: auto;
   padding-left: 0;
   margin-bottom: 0;
@@ -2509,36 +2507,33 @@ a {
   flex-wrap: wrap;
   justify-content: flex-end;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .mbr-iconfont-social {
+.cid-sZYKqFz1Zr .media-container-row .social-list .mbr-iconfont-social {
   font-size: 1.5rem;
   color: #ffffff;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .soc-item {
+.cid-sZYKqFz1Zr .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a {
+.cid-sZYKqFz1Zr .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   transition: .2s linear;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a:hover {
+.cid-sZYKqFz1Zr .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-sZYmKLsoQD .media-container-row .social-list {
+  .cid-sZYKqFz1Zr .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt {
   word-break: break-word;
   width: 100%;
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt p {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-sZYmKLsoQD foot-menu-item {
-  text-align: right;
 }
 .cid-sZXMY19iew {
   z-index: 1000;
@@ -2940,25 +2935,25 @@ a {
     width: 100%;
   }
 }
-.cid-sZYmKLsoQD {
+.cid-sZYKqFz1Zr {
   padding-top: 2rem;
   padding-bottom: 2rem;
   background-color: #000000;
 }
-.cid-sZYmKLsoQD .row-links {
+.cid-sZYKqFz1Zr .row-links {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .social-row {
+.cid-sZYKqFz1Zr .social-row {
   width: 100%;
   justify-content: center;
 }
-.cid-sZYmKLsoQD .media-container-row {
+.cid-sZYKqFz1Zr .media-container-row {
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu {
   list-style: none;
   display: flex;
   justify-content: center;
@@ -2966,13 +2961,13 @@ a {
   padding: 0;
   margin-bottom: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li {
   padding: 0 1rem 1rem 1rem;
 }
-.cid-sZYmKLsoQD .media-container-row .foot-menu li p {
+.cid-sZYKqFz1Zr .media-container-row .foot-menu li p {
   margin: 0;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list {
+.cid-sZYKqFz1Zr .media-container-row .social-list {
   width: auto;
   padding-left: 0;
   margin-bottom: 0;
@@ -2981,34 +2976,31 @@ a {
   flex-wrap: wrap;
   justify-content: flex-end;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .mbr-iconfont-social {
+.cid-sZYKqFz1Zr .media-container-row .social-list .mbr-iconfont-social {
   font-size: 1.5rem;
   color: #ffffff;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list .soc-item {
+.cid-sZYKqFz1Zr .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a {
+.cid-sZYKqFz1Zr .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   transition: .2s linear;
 }
-.cid-sZYmKLsoQD .media-container-row .social-list a:hover {
+.cid-sZYKqFz1Zr .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-sZYmKLsoQD .media-container-row .social-list {
+  .cid-sZYKqFz1Zr .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt {
   word-break: break-word;
   width: 100%;
 }
-.cid-sZYmKLsoQD .media-container-row .row-copirayt p {
+.cid-sZYKqFz1Zr .media-container-row .row-copirayt p {
   width: 100%;
-}
-.cid-sZYmKLsoQD foot-menu-item {
-  text-align: right;
 }
