--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3386,12 +3386,163 @@ a {
   color: #ffffff;
 }
 .cid-t8zVi0YuKW .mbr-section-title {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-t8zVi0YuKW .mbr-text,
 .cid-t8zVi0YuKW .mbr-section-btn,
 .cid-t8zVi0YuKW .social-row {
-  color: #000000;
+  color: #ffffff;
+}
+.cid-t8DlJnItCC {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #004669;
+}
+.cid-t8DlJnItCC .mbr-media {
+  position: relative;
+}
+.cid-t8DlJnItCC .mbr-media img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-t8DlJnItCC .icon-wrap {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+}
+.cid-t8DlJnItCC .mbr-media span {
+  font-size: 4rem;
+  transition: all 0.2s;
+}
+.cid-t8DlJnItCC .modalWindow {
+  position: fixed;
+  z-index: 5000;
+  left: 0;
+  top: 0;
+  background-color: rgba(61, 61, 61, 0.65);
+  width: 100%;
+  height: 100%;
+}
+.cid-t8DlJnItCC .modalWindow .modalWindow-container {
+  display: table-cell;
+  vertical-align: middle;
+}
+.cid-t8DlJnItCC .modalWindow .modalWindow-video {
+  height: calc(44.9943757vw);
+  width: 80vw;
+  margin: 0 auto;
+}
+.cid-t8DlJnItCC .close {
+  position: fixed;
+  opacity: 0.5;
+  font-size: 22px;
+  font-weight: 300;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  border: 2px solid #fff;
+  text-shadow: none;
+  z-index: 5;
+  transition: opacity 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-t8DlJnItCC .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-t8DlJnItCC .mbr-section-title {
+  color: #ffffff;
+}
+.cid-t8DlOLIzTO {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #108b0a;
+}
+.cid-t8DlOLIzTO .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-t8DlOLIzTO .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-t8DlOLIzTO .socicon-bg-facebook {
+  background: #1778f2;
+  color: #ffffff;
+}
+.cid-t8DlOLIzTO .socicon-bg-facebook:hover {
+  background: #0b60cb;
+}
+.cid-t8DlOLIzTO .socicon-bg-twitter {
+  background: #1da1f2;
+  color: #ffffff;
+}
+.cid-t8DlOLIzTO .socicon-bg-twitter:hover {
+  background: #0c85d0;
+}
+.cid-t8DlOLIzTO .socicon-bg-vkontakte {
+  background: #4680C2;
+  color: #ffffff;
+}
+.cid-t8DlOLIzTO .socicon-bg-vkontakte:hover {
+  background: #3567a0;
+}
+.cid-t8DlOLIzTO .socicon-bg-odnoklassniki {
+  background: #ee8208;
+  color: #ffffff;
+}
+.cid-t8DlOLIzTO .socicon-bg-odnoklassniki:hover {
+  background: #bd6706;
+}
+.cid-t8DlOLIzTO .socicon-bg-pinterest {
+  background: #e60023;
+  color: #ffffff;
+}
+.cid-t8DlOLIzTO .socicon-bg-pinterest:hover {
+  background: #b3001b;
+}
+.cid-t8DlOLIzTO .socicon-bg-mail {
+  background: #005ff9;
+  color: #ffffff;
+}
+.cid-t8DlOLIzTO .socicon-bg-mail:hover {
+  background: #004cc6;
+}
+.cid-t8DlOLIzTO .btn-social {
+  font-size: 32px;
+  border-radius: 50%;
+  padding: 0;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+  border: none !important;
+}
+.cid-t8DlOLIzTO .btn-social i {
+  top: 0;
+  line-height: 55px;
+  width: 55px;
+}
+.cid-t8DlOLIzTO [class^="socicon-"]:before,
+.cid-t8DlOLIzTO [class*=" socicon-"]:before {
+  line-height: 55px;
+}
+.cid-t8DlOLIzTO .mbr-section-title,
+.cid-t8DlOLIzTO .mbr-social-likes {
+  color: #ffffff;
 }
 .cid-sZYKqFz1Zr {
   padding-top: 2rem;
