--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3618,6 +3618,9 @@ a {
   padding-bottom: 5rem;
   background-color: #ffffff;
 }
+.cid-t8zZZMzDqm .mbr-text {
+  text-align: left;
+}
 .cid-sZXMY19iew {
   z-index: 1000;
   width: 100%;
