--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1064,10 +1064,51 @@ a {
     left: -1rem;
   }
 }
-.cid-sZXN5scZxT {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.cid-t8EBVUwucV {
   background-image: url("../../../assets/images/norway-6180381-2000x1333.jpg");
+}
+.cid-t8EBVUwucV .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-t8EBVUwucV .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-t8EBVUwucV .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  margin-bottom: 1rem;
+  margin-right: .7rem;
+}
+.cid-t8EBVUwucV .social-row .soc-item .mbr-iconfont {
+  font-size: 32px;
+  border-radius: 50%;
+  padding: 0.6rem;
+  border: 2px solid #004669;
+  transition: all 0.3s;
+  color: #004669;
+}
+.cid-t8EBVUwucV .social-row .soc-item .mbr-iconfont:hover {
+  background-color: #004669;
+  color: #ffffff;
+}
+.cid-t8EBVUwucV .mbr-section-title {
+  color: #004669;
+}
+.cid-t8EBVUwucV .mbr-text,
+.cid-t8EBVUwucV .mbr-section-btn,
+.cid-t8EBVUwucV .social-row {
+  color: #004669;
+}
+.cid-sZXN5scZxT {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #000000;
 }
 .cid-sZXN5scZxT .card-wrapper {
   background: #004669;
