--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1105,37 +1105,6 @@ a {
 .cid-t8EBVUwucV .social-row {
   color: #004669;
 }
-.cid-sZXN5scZxT {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: #000000;
-}
-.cid-sZXN5scZxT .card-wrapper {
-  background: #004669;
-  border-radius: 4px;
-}
-@media (max-width: 767px) {
-  .cid-sZXN5scZxT .card-wrapper {
-    padding: 1rem;
-  }
-}
-@media (min-width: 768px) and (max-width: 991px) {
-  .cid-sZXN5scZxT .card-wrapper {
-    padding: 2rem;
-  }
-}
-@media (min-width: 992px) {
-  .cid-sZXN5scZxT .card-wrapper {
-    padding: 4rem;
-  }
-}
-.cid-sZXN5scZxT .card-title {
-  color: #ffffff;
-}
-.cid-sZXN5scZxT .mbr-text,
-.cid-sZXN5scZxT .mbr-section-btn {
-  color: #ffffff;
-}
 .cid-sZYKqFz1Zr {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1566,8 +1535,6 @@ a {
   }
 }
 .cid-sZYxLii5sg {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
   background-color: #004669;
 }
 @media (max-width: 991px) {
@@ -2038,9 +2005,150 @@ a {
     left: -1rem;
   }
 }
+.cid-t8EMqaV4xK {
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+  background: #004669;
+}
+.cid-t8EMqaV4xK .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-t8EMqaV4xK .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 767px) {
+  .cid-t8EMqaV4xK .row {
+    flex-direction: column-reverse;
+  }
+  .cid-t8EMqaV4xK .row .map-wrapper {
+    margin-bottom: 2rem;
+  }
+}
+.cid-t8EMqaV4xK .google-map {
+  height: 100%;
+  position: relative;
+}
+.cid-t8EMqaV4xK .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-t8EMqaV4xK .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-t8EMqaV4xK .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-t8EMqaV4xK .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-t8EMqaV4xK .image-wrapper {
+  display: flex;
+  align-items: center;
+}
+.cid-t8EMqaV4xK .card-wrapper {
+  display: flex;
+  border-radius: 4px;
+  background: #fafafa;
+}
+.cid-t8EMqaV4xK .card-wrapper:not(:nth-last-child(1)) {
+  margin-bottom: 2rem;
+}
+@media (max-width: 991px) {
+  .cid-t8EMqaV4xK .card-wrapper {
+    padding: 1rem 2rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-t8EMqaV4xK .card-wrapper {
+    padding: 2rem 4rem;
+  }
+}
+.cid-t8EMqaV4xK .mbr-iconfont {
+  font-size: 2rem;
+  padding-right: 1.5rem;
+  color: #004669;
+}
+.cid-t8EMqaV4xK .mbr-section-title {
+  color: #ffffff;
+}
+.cid-t8EMqaV4xK .card-title {
+  color: #004669;
+}
+.cid-t8EMpA3vPO {
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #ffffff;
+}
+.cid-t8EMpA3vPO .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-t8EMpA3vPO .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-t8EMpA3vPO .media-container-row {
+  justify-content: space-between;
+}
+.cid-t8EMpA3vPO .text-content {
+  max-width: 50%;
+}
+@media (max-width: 768px) {
+  .cid-t8EMpA3vPO .text-content {
+    max-width: none;
+  }
+}
+.cid-t8EMpA3vPO .mbr-iconfont-social {
+  margin: 0.5rem;
+  font-size: 32px;
+  display: flex;
+  border-radius: 50%;
+  text-align: center;
+  color: #004669;
+  border: 2px solid #004669;
+  justify-content: center;
+  align-content: center;
+  transition: all 0.3s;
+}
+.cid-t8EMpA3vPO .mbr-iconfont-social:before {
+  padding: 0.6rem;
+}
+.cid-t8EMpA3vPO .mbr-iconfont-social:hover {
+  background-color: #004669;
+  color: #ffffff;
+}
+@media (max-width: 768px) {
+  .cid-t8EMpA3vPO .icons {
+    justify-content: center !important;
+  }
+  .cid-t8EMpA3vPO .text-content * {
+    text-align: center;
+  }
+}
+.cid-t8EMpA3vPO .mbr-section-title {
+  color: #004669;
+}
 .cid-sZYo3B5vXj {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
+  padding-top: 7rem;
+  padding-bottom: 7rem;
   background-color: #004669;
 }
 .cid-sZYo3B5vXj .mbr-overlay {
