--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5123,6 +5123,46 @@ a {
 .cid-tnDgX3RCpC .mbr-description {
   color: #353535;
 }
+.cid-tnDlcfG9aN {
+  background-color: #000000;
+}
+.cid-tnDlcfG9aN .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tnDlcfG9aN .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tnDlcfG9aN .text-wrapper {
+  padding: 1rem;
+}
+@media (max-width: 991px) {
+  .cid-tnDlcfG9aN .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-tnDlcfG9aN img {
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .cid-tnDlcfG9aN .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-tnDlcfG9aN .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tnDlcfG9aN .mbr-text {
+  color: #ffffff;
+}
+.cid-tnDlcfG9aN .mbr-description {
+  color: #353535;
+}
 .cid-sZYKqFz1Zr {
   padding-top: 2rem;
   padding-bottom: 2rem;
